added the base to the snowman by creating three divs inside the snowman class div. also added style css link to html and created the assets/css folder.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <head>
 	
 	<meta charset="utf-8">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="assets/css/style.css">
 	
 	
 		<title>iop-7xx | Monica Romero</title>
@@ -17,7 +17,13 @@
 
 <body>
 	
-	<p>the content goes here.</p>
+	<div class="snowman">
+		
+		<div class="smHead"></div>
+		<div class="smBody"></div>
+		<div class="smFeet"></div>
+		
+	</div>
 	
 </body>
 	
