added the snowman's face and hat divs along with their styles

--- a/index.html
+++ b/index.html
@@ -19,7 +19,19 @@
 	
 	<div class="snowman">
 		
-		<div class="smHead"></div>
+		<div class="smHead">
+			<div class="hat">
+				<div class="rim"></div>
+			</div>
+			<div class="face">
+				<div class="eyes">
+					<div class="leye"></div>
+					<div class="reye"></div>
+				</div>
+				<div class="nose"></div>
+				<div class="mouth"></div>
+			</div>
+		</div>
 		<div class="smBody"></div>
 		<div class="smFeet"></div>
 		
